Fixed product image spacing issue

--- a/app/assets/stylesheets/products.css
+++ b/app/assets/stylesheets/products.css
@@ -47,8 +47,12 @@ h4#review {
   margin-top: 100px;
 }
 
-img {
+
+
+.all_products img {
   padding: 5px;
+  width: 200px;
+  height: 200px;
   backface-visibility: hidden;
 }
 
